# dm

./: .env  Cargo.toml  test.rest
dm-backend/: Cargo.toml
dm-backend/src/: api.rs  main.rs  model.rs
dm-common/: Cargo.toml
dm-common/src/: error.rs  model.rs
dm-front/: Cargo.toml  Dioxus.toml
dm-front/src/: components.rs  lib.rs  main.rs  model.rs
dm-front/src/page/: home.rs  mod.rs  settings.rs
migrations/: 20241001040831_init.sql
src/: api.rs  lib.rs  main.rs  model.rs
