[package]
name = "dm-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
axum = { workspace = true }
chrono = { version = "0.4.38", features = ["serde"] }
rust_decimal = "1.36.0"
tokio = { version = "1.40.0", features = ["rt-multi-thread", "net", "macros"] }
tower-http = { version = "0.6.1", features = ["cors"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
dm-common = { path = "../dm-common" }